# testfunc

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: python_build.yaml
